conformance/0.1/expected/errors/unclosed-nested-annotation.cdx
<ExpectedError category=~syntax reason=~gloss-syn-unclosed-nested-annotation/>
